After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 607056 - Wordnumber Memory game can't match number to translated word
Wordnumber Memory game can't match number to translated word
Status: RESOLVED FIXED
Product: gcompris
Classification: Other
Component: general
unspecified
Other Linux
: Normal minor
: ---
Assigned To: Bruno Coudoin
Rami Aubourg-Kaires
Depends on:
Blocks:
 
 
Reported: 2010-01-15 08:57 UTC by littlebat
Modified: 2010-01-18 21:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot for memory_wordnumber (164.51 KB, image/png)
2010-01-15 08:57 UTC, littlebat
Details
a un-finished Chinese po file (224.95 KB, application/octet-stream)
2010-01-16 03:59 UTC, littlebat
Details

Description littlebat 2010-01-15 08:57:37 UTC
Created attachment 151457 [details]
screenshot for memory_wordnumber

Version 9.0
OS Ubuntu 9.04

Activity: /reading/memory_wordnumber

Match number to translated Chinese word can't make cards disappeared when it works in English locale.

Below is a screenshot. "零" is the Chinese translation of number "0".
Comment 1 littlebat 2010-01-16 03:59:11 UTC
Created attachment 151520 [details]
a un-finished Chinese po file
Comment 2 Bruno Coudoin 2010-01-18 21:36:18 UTC
Fixed in commit 3c9e414f2d95774fd67d77cbcb07b7246622c993