Fixed memory word number activity. It was broken related to translations.

https://bugzilla.gnome.org/show_bug.cgi?id=607056